fix: card vertical alignment

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,8 @@ body, html {
   max-width: 420px;
   width: 90%;
   color: #4e342e;
-  z-index: 1;
+  z-index: 2;
+  position: relative;
 }
 
 input {
